# AI-Programming

./: README.md
Final_project/: README.md
Final_project/Bonus_imagenet/: README.md  task0_operators.py  task1_optimizer.py
Final_project/Bonus_imagenet/MyTensor/: TensorBindings.cpp  __init__.py  ai_programming.h  fully_connected.cu  fully_connected.h  max_pooling.cu
Final_project/Task1_PyTorch_Basic_Implementation/: README.md
Final_project/Task1_PyTorch_Basic_Implementation/lab0_cifar_classification/: cifar.py
Final_project/Task2_PyTorch_Parallel_Practice/: README.md  mnist.py
Final_project/Task3_Custom_Implementation/: README.md  task0_operators.py  task1_optimizer.py
lab0/: cifar_net.pth
lab1/: README.txt  Tensor.cu  ai_programming.h  awake.sh  test
lab3/: CEloss.h  README.txt  Tensor.h  Tensor2Numpy.cpp  activations.cu  activations.h  conv.cu  conv.h  setup.py  tensor.cp310-win_amd64.pyd  test.py
lab3/MNIST/: get_array_mnist.py
lab3/example/: CMakeLists.txt  example.cpp  setup.py  test.py
lab3/example/example.egg-info/: PKG-INFO  SOURCES.txt
lab3/tensor.egg-info/: PKG-INFO  SOURCES.txt
lab4/: REPORT.txt  task1_operators.py  task2_autodiff.py  test_task1_backward.py  test_task1_forward.py  test_task2_auto_diff.py  test_task2_topo_sort.py
lab5/: Report.txt  task0_autodiff.py  task0_operators.py  task1_optimizer.py
lab5_auto_diff/: README.md  task0_autodiff.py  task0_operators.py  task1_optimizer.py
lab5_auto_diff/MyTensor/: Tensor.cu  TensorBindings.cpp  conv.cu  max_pooling.cu  max_pooling.h
(+5 files in other folders)
